syntax = "proto3";

package rest;

// Generic Query for limiting results based on resource permissions
message OAuthConfigurationRequest {
}

message OAuthConfigurationResponse {
    string issuer = 1;
    string authorization_endpoint = 2;
    string token_endpoint = 3;
    string jwks_uri = 4;
    repeated string response_types_supported = 5;
    repeated string subject_types_supported = 6;
    repeated string id_token_signing_alg_values_supported = 7; 
    repeated string scopes_supported = 8;
    repeated string token_endpoint_auth_methods_supported = 9;
    repeated string claims_supported = 10;
}
